# ArtButSports

./: .gitignore  README.md  color.ipynb  data_cleaning.ipynb  embeddings.ipynb  pyproject.toml
artbutsports/: features.py  scoring.py
artbutsports/api/: app.py
backend/: __init__.py  features.py  scoring.py
backend/api/: app.py
benchmark/: .gitignore  README.md  cases.example.json  run.py
benchmark/cases.example/: README.md
db-browser/: README.md  index.html  package.json
db-browser/scripts/: build_index.py
db-browser/src/: app.js  styles.css
docs/: FEATURE_TABLE_ANALYSIS.md  GCP_VM_SETUP.md  OPERATIONS.md  PRIVACY.md  SCORING.md
docs/wireframes/: README.md
experiments/: color.ipynb  pose.ipynb
frontend/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/query/: page.tsx
frontend/src/app/visualize/: page.tsx
frontend/src/components/: ImageDrop.tsx  Logo.tsx  ResultCard.tsx  SiteNav.tsx  Slider.tsx  Toggle.tsx  Weights.tsx  useMasonrySpan.ts
frontend/src/lib/: api.ts  samples.ts
scripts/: build_features.py  dev.sh  run_backend.sh  setup_vm_images.py
