[project]
name = "artbutsports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.4.0",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.51",
]
